--- a/application/views/login.html
+++ b/application/views/login.html
@@ -32,7 +32,7 @@
                             <button class="button log_button"> Se connecter </button>
                         </div>
                         <hr>
-                        <p><a href="./incription.html"> Sign in </a></p>
+                        <p class="lien"><a href="./incription.html"> Creer un comtpe </a></p>
                     </div>
                 </div>
             </form>
