--- a/application/views/assets/css/page.css
+++ b/application/views/assets/css/page.css
@@ -10,7 +10,21 @@ header
     background-color: rgb(236, 236, 236);
 }
 
+main
+{
+    min-height: 70vh;
+}
+
+.table
+{
+    width: 100%;
+}
+
 .footer
 {
     clear: both;
+    margin-top: 2em;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
 }
