--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -2,9 +2,29 @@ header
 {
     width: 100%;
     position: fixed;
+    z-index: 999;
 }
 
 .navbar
 {
     background-color: rgb(236, 236, 236);
+}
+
+main
+{
+    min-height: 70vh;
+}
+
+.table
+{
+    width: 100%;
+}
+
+.footer
+{
+    clear: both;
+    margin-top: 2em;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
 }
