--- a/application/views/front_office/proposition.html
+++ b/application/views/front_office/proposition.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="../assets/css/header.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
     <link rel="stylesheet" href="../assets/css/page.css">
-    <script src="../assets/js/script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.2.0/chart.min.js"></script>
-    <script src="../assets/js/chart.js"></script>
-    <title>e-Fanakalo</title>
+    <link rel="stylesheet" href="../assets/css/proposition.css">
+    <title>Proposition</title>
 </head>
 <body>
     <header>
@@ -28,55 +26,50 @@
             </div>
           
             <div id="navbarBasicExample" class="navbar-menu">
-          
-              <div class="navbar-end">
-                <div class="navbar-item">
-                  <div class="buttons">
-                    <a class="button is-warning">
-                      Log out
+                <div class="navbar-start">
+                    <a class="navbar-item">
+                      Home
+                    </a>
+              
+                    <a class="navbar-item">
+                      My object
+                    </a>
+
+                    <a class="navbar-item">
+                        Proposition
                     </a>
                   </div>
+                <div class="navbar-end">
+                  <div class="navbar-item">
+                    <div class="buttons">
+                      <a class="button is-warning">
+                        Log out
+                      </a>
+                    </div>
+                  </div>
                 </div>
-              </div>
             </div>
           </nav>
     </header>
     <br><br><br>
     <main>
         <div class="container">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th> idObjet </th>
-                        <th> idPersonne </th>
-                        <th> Categorie </th>
-                        <th> Prix </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td> 1 </td>
-                        <td> 1 </td>
-                        <td> Akanjo </td>
-                        <td> 0000 Ar </td>
-                        <td><button class="button is-success"> Valider </button></td>
-                    </tr>
-                </tbody>
-            </table>
-            <button class="button is-info js-modal-trigger" data-target="modal-js-example">
-              <img src="../assets/font/chart-bar-solid.svg">
-            </button>
-        </div>
-
-        <!-- eto ny modal an'ny statistique -->
-        <div id="modal-js-example" class="modal">
-            <div class="modal-background"></div>
-            <div class="modal-content">
-                <div class="box">
-                    <canvas id="statistique" aria-label="chart" role="img"></canvas>
+            <div class="box">
+                <div class="columns" style="align-items: center;">
+                    <div class="column is-one-fifth">
+                        <img src="../assets/img/inscription.jfif" width="150">
+                    </div>
+                    <div class="column column_desc">
+                        <p class="subtitle is-4"> Nom produit </p>
+                        <p class="subtitle is-4"> Appartient à PERSONNE </p>
+                        <p class="subtitle is-4"> 0000 Ar </p>
+                    </div>
+                    <div class="column">
+                        <button class="button is-danger" style="margin-bottom: 1em;"> Décliner </button>
+                        <button class="button is-success"> Accepter </button>
+                    </div>
                 </div>
             </div>
-            <button class="modal-close is-large" aria-label="close"></button>
         </div>
     </main>
     <footer class="footer">
