--- a/application/views/front_office/page.html
+++ b/application/views/front_office/page.html
@@ -1,74 +1,119 @@
-<div class="columns">
-    <div class="column">
-        <div class="box">
-            <p class="subtitle is-4 item"> Nom produit </p>
-            <figure class="image">
-                <img src="./assets/img/inscription.jfif">
-            </figure>
-            <br>
-            <p class="item"> 0000 Ar </p>
-            <br>
-            <select class="input">
-                <option value="">Choose categorie</option>
-                <option value="">Akanjo</option>
-                <option value="">Boky</option>
-            </select>
-            <br><br>
-            <button class="button is-success"> Valider </button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/bulma/css/bulma.min.css">
+    <link rel="stylesheet" href="../assets/css/page.css">
+    <link rel="stylesheet" href="../assets/css/header.css">
+    <link rel="stylesheet" href="../assets/css/footer.css">
+    <title>e-Fanakalo</title>
+</head>
+<body>
+    <header>
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+              <a class="navbar-item" href="">
+                <img src="../assets/img/logoPage - Copie.jpg" width="30" height="50"> <h1 class="title is-3" style="margin-left: .2em; margin-bottom: .2em;"> e-Fanakalo </h1>   
+              </a>
+              <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+              </a>
+            </div>
+          
+            <div id="navbarBasicExample" class="navbar-menu">
+                <div class="navbar-start">
+                    <a class="navbar-item">
+                      Home
+                    </a>
+              
+                    <a class="navbar-item">
+                      My object
+                    </a>
+
+                    <a class="navbar-item">
+                        Proposition
+                    </a>
+                  </div>
+                <div class="navbar-end">
+                  <div class="navbar-item">
+                    <div class="buttons">
+                      <a class="button is-warning">
+                        Log out
+                      </a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </nav>
+    </header>
+    <br><br><br>
+    <main>
+        <div class="columns">
+            <div class="column is-one-quarter">
+                <div class="box">
+                    <p class="subtitle is-4 item"> Nom produit </p>
+                    <figure class="image">
+                        <img src="../assets/img/inscription.jfif">
+                    </figure>
+                    <br>
+                    <p class="item"> 0000 Ar </p>
+                    <p class="item"> Appartient à PERSONNE </p>
+                    <br>
+                    <button class="button is-success"> Echanger </button>
+                </div>
+            </div>
+            <div class="column is-one-quarter">
+                <div class="box">
+                    <p class="subtitle is-4 item"> Nom produit </p>
+                    <figure class="image">
+                        <img src="../assets/img/inscription.jfif">
+                    </figure>
+                    <br>
+                    <p class="item"> 0000 Ar </p>
+                    <p class="item"> Appartient à PERSONNE </p>
+                    <br>
+                    <button class="button is-success"> Echanger </button>
+                </div>
+            </div>
+            <div class="column is-one-quarter">
+                <div class="box">
+                    <p class="subtitle is-4 item"> Nom produit </p>
+                    <figure class="image">
+                        <img src="../assets/img/inscription.jfif">
+                    </figure>
+                    <br>
+                    <p class="item"> 0000 Ar </p>
+                    <p class="item"> Appartient à PERSONNE </p>
+                    <br>
+                    <button class="button is-success"> Echanger </button>
+                </div>
+            </div>
+            <div class="column is-one-quarter">
+                <div class="box">
+                    <p class="subtitle is-4 item"> Nom produit </p>
+                    <figure class="image">
+                        <img src="../assets/img/inscription.jfif">
+                    </figure>
+                    <br>
+                    <p class="item"> 0000 Ar </p>
+                    <p class="item"> Appartient à PERSONNE </p>
+                    <br>
+                    <button class="button is-success"> Echanger </button>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="column">
-        <div class="box">
-            <p class="subtitle is-4 item"> Nom produit </p>
-            <figure class="image">
-                <img src="./assets/img/inscription.jfif">
-            </figure>
-            <br>
-            <p class="item"> 0000 Ar </p>
-            <br>
-            <select class="input">
-                <option value="">Choose categorie</option>
-                <option value="">Akanjo</option>
-                <option value="">Boky</option>
-            </select>
-            <br><br>
-            <button class="button is-success"> Valider </button>
+    </main>
+    <footer class="footer">
+        <div class="content has-text-centered">
+          <p>
+            <strong>ITUniversity</strong> Projet Web <strong>32h</strong><br><br>
+            Judicaël-ETU001820 & Toky-1822 & Mirindra-1826
+          </p>
         </div>
-    </div>
-    <div class="column">
-        <div class="box">
-            <p class="subtitle is-4 item"> Nom produit </p>
-            <figure class="image">
-                <img src="./assets/img/inscription.jfif">
-            </figure>
-            <br>
-            <p class="item"> 0000 Ar </p>
-            <br>
-            <select class="input">
-                <option value="">Choose categorie</option>
-                <option value="">Akanjo</option>
-                <option value="">Boky</option>
-            </select>
-            <br><br>
-            <button class="button is-success"> Valider </button>
-        </div>
-    </div>
-    <div class="column">
-        <div class="box">
-            <p class="subtitle is-4 item"> Nom produit </p>
-            <figure class="image">
-                <img src="./assets/img/inscription.jfif">
-            </figure>
-            <br>
-            <p class="item"> 0000 Ar </p>
-            <br>
-            <select class="input">
-                <option value="">Choose categorie</option>
-                <option value="">Akanjo</option>
-                <option value="">Boky</option>
-            </select>
-            <br><br>
-            <button class="button is-success"> Valider </button>
-        </div>
-    </div>
-</div>
+    </footer>
+</body>
+</html>
