tsy mandeha chart

--- a/application/views/back_office/page.html
+++ b/application/views/back_office/page.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="../assets/css/header.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
     <link rel="stylesheet" href="../assets/css/page.css">
+    <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+    <script type="text/javascript" src="../assets/js/chart.js"></script>
     <script src="../assets/js/script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.2.0/chart.min.js"></script>
-    <script src="../assets/js/chart.js"></script>
     <title>e-Fanakalo</title>
 </head>
 <body>
