--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -1,30 +1,20 @@
-header
-{
-    width: 100%;
-    position: fixed;
-    z-index: 999;
-}
-
-.navbar
-{
-    background-color: rgb(236, 236, 236);
-}
-
 main
 {
     min-height: 70vh;
 }
 
-.table
+.item
+{
+    display: flex;
+    justify-content: center;
+}
+
+.button
 {
     width: 100%;
 }
 
-.footer
+.table
 {
-    clear: both;
-    margin-top: 2em;
-    position: absolute;
     width: 100%;
-    /*bottom: 0;*/
 }
