--- a/application/views/front_office/page.html
+++ b/application/views/front_office/page.html
@@ -40,6 +40,16 @@
                   </div>
                 <div class="navbar-end">
                   <div class="navbar-item">
+                    <input class="input" type="text" placeholder="Entrer un mot-clé">
+                    <div class="select" style="width: 100%; margin-left: 1em;">
+                      <select class="input" name="">
+                        <option value="">Categorie</option>
+                        <option value="">Akanjo</option>
+                      </select>
+                    </div>
+                    <button class="button is-light" style="width: 50%; margin-right: 1em; margin-left: 1em;">
+                      Search
+                    </button>
                     <div class="buttons">
                       <a class="button is-warning">
                         Log out
