--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -18,3 +18,23 @@ main
 {
     width: 100%;
 }
+
+.js-modal-trigger
+{
+    position: fixed;
+    bottom: 10vh;
+    right: 9vh;
+    border-radius: 100%;
+    width: 4%;
+    height: 8%;
+}
+
+/*.stat_echange*/
+/*{*/
+/*    width: 4%;*/
+/*    height: 8%;*/
+/*    border-radius: 100%;*/
+/*    bottom: 22vh;*/
+/*    right: 9vh;*/
+/*    position: fixed;*/
+/*}*/
