--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -21,20 +21,10 @@ main
 
 .js-modal-trigger
 {
+    width: 3em;
+    height: 3em;
     position: fixed;
     bottom: 10vh;
     right: 9vh;
     border-radius: 100%;
-    width: 4%;
-    height: 8%;
 }
-
-/*.stat_echange*/
-/*{*/
-/*    width: 4%;*/
-/*    height: 8%;*/
-/*    border-radius: 100%;*/
-/*    bottom: 22vh;*/
-/*    right: 9vh;*/
-/*    position: fixed;*/
-/*}*/
